--- a/petstore/pets.html
+++ b/petstore/pets.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Available Pets - Pet Store</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
 <body>
     <header>
@@ -19,6 +20,15 @@
     <main>
         <section class="pets-section">
             <h2>All Available Pets</h2>
+            <div class="filter-container" style="display: flex; gap: 24px; justify-content: center; margin-bottom: 20px;">
+                Type:
+                <div style="display: flex; gap: 16px;">
+                    <div><input type="checkbox" id="type-dogs" name="pet-type" value="Dog" checked/> Dogs</div>
+                    <div><input type="checkbox" id="type-cats" name="pet-type" value="Cat" checked/> Cats</div>
+                    <div><input type="checkbox" id="type-capybaras" name="pet-type" value="Capybara" checked/> Capybaras</div>
+                    <div><input type="checkbox" id="type-birds" name="pet-type" value="Bird" checked/> Birds</div>
+                </div>
+            </div>
             <div id="pet-list" class="pet-list">
                 <!-- Pets will be loaded here by JavaScript -->
             </div>
