--- a/petstore/index.html
+++ b/petstore/index.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to Our Pet Store</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="pets.html">Pets</a>
-            <a href="#contact">Contact</a>
-        </nav>
+    <header class="hero-header">
+        <div class="header-content">
+            <h1>Welcome to Our Pet Store</h1>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="pets.html">Pets</a>
+                <a href="#contact">Contact</a>
+            </nav>
+        </div>
     </header>
 
     <main>
