--- a/petstore/pets.html
+++ b/petstore/pets.html
@@ -8,13 +8,15 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
 <body>
-    <header>
-        <h1>Our Available Pets</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="pets.html">Pets</a>
-            <a href="index.html#contact">Contact</a>
-        </nav>
+    <header class="hero-header">
+        <div class="header-content">
+            <h1>Welcome to Our Pet Store</h1>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="pets.html">Pets</a>
+                <a href="index.html#contact">Contact</a>
+            </nav>
+        </div>
     </header>
 
     <main>
